# ecm_gooey_path

./: LICENSE  MANIFEST.in  README.rst  build_gui.spec  requirements.txt  setup.cfg  setup.py
.github/: pyinstLin.yml
.github/workflows/: instLinTest2.yml  newtest.yml  pyinstLin.yml  pyinstLinTest.yml  pyinstMac.yml  pyinstWin.yml  pylint.yml
ecm/: main_gui.py
