[metadata]
name = med_tocsv
version = 1.0
author = "Jean-Emmanuel Longueville, Myriam Hanna"
author_email = "jean.emmanuel.longueville(@)univ-poitiers.fr,
                myriam.hanna(@)univ-poitiers.fr"
description = A module that converts MedAssociates data to csv files
license = MIT,
long_description = file: README.MD
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Utilities
    License :: OSI Approved ::
keywords = Gooey, Test
requires =
    pandas
    numpy
    argparse
    yaml
    gooey

[options]
packages = find:
zip_safe = False
install_requires = pandas ; numpy ; argparse ; yaml ; gooey 

[options.entry_points]
console_scripts =
    ecm_path-gui = ecm.main_gui:main

[options.data_files]
data = ecm/img/config_icon.png, ecm/img/program_icon.png